# Workspace
[workspace]
resolver = "2"
members = ["pallet-jwt", "validator"]

# Package info
[workspace.package]
authors = ["Virto Team <contact@virto.network>"]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"
repository = "https://github.com/virto-network/pallet-pass-jwt.git"

# Dependencies

[workspace.dependencies]
jsonwebtoken = { version = "9.3.1" }
serde = { version = "1.0.219", features = ["derive"] }
rsa = { version = "0.9.8" }
base64 = "0.22"
rand = "0.9.1"
log = { version = "0.4.22", default-features = false }


# FRAME
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
  "derive",
] }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame = { version = "0.9.1", package = "polkadot-sdk-frame", default-features = false, features = [
  "experimental",
  "runtime",
] }
pallet-balances = { version = "41.1.0", default-features = false }
sp-io = { version = "40.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-core = "36.1.0"

# FRAME Contrib
traits-authn = { git = "https://github.com/virto-network/frame-contrib", package = "fc-traits-authn", default-features = false }
pallet-pass = { git = "https://github.com/virto-network/frame-contrib", package = "fc-pallet-pass", default-features = false }

# Local Crates
validator = { path = "validator", default-features = false }
pallet-jwt = { path = "pallet-jwt", default-features = false }
