[package]
name = "pallet-jwt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codec.workspace = true
scale-info.workspace = true
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
frame.workspace = true
pallet-balances.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
log.workspace = true
sp-std.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
sp-core = { workspace = true }

[features]
default = ["std"]
std = ["codec/std", "frame/std", "scale-info/std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
try-runtime = ["frame/try-runtime"]
