[package]
name = "validator"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonwebtoken.workspace = true
serde.workspace = true
# serde_json = "1.0"

[dev-dependencies]
rsa.workspace = true
base64.workspace = true
rand.workspace = true
